# Mugen-deck

./: .gitattributes  .gitignore  CLAUDE.md  mugen_prd.md
.github/workflows/: build.yml  release.yml
apps/sharkdeck/: cc-app.json  package-lock.json  package.json  tsconfig.json
apps/sharkdeck/src/: fling.ts  index.ts  proton.ts  trainer.ts  types.ts
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: config.ts  server.ts
backend/src/routes/: apps.ts  health.ts
daemon/: Cargo.toml  mugen.service
daemon/src/: app_manager.rs  auth.rs  config.rs  error.rs  game_detection.rs  lib.rs  main.rs
daemon/src/routes/: apps.rs  auth.rs  game.rs  health.rs  mod.rs  sharkdeck.rs  system.rs  updates.rs
daemon/src/sharkdeck/: fling.rs  gcw.rs  mod.rs  proton.rs  trainer.rs  types.rs
daemon/tests/: health_test.rs
docs/: steam-deck-deployment.md
docs/plans/: 2026-03-05-gcw-trainer-source-design.md  2026-03-05-gcw-trainer-source.md
installer/: Install Mugen.desktop  install.sh  mugen-launcher.sh
launcher/: index.html  package-lock.json  package.json  vite.config.ts
launcher/src/: App.tsx  main.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: main.rs
launcher/src/api/: daemon.ts
launcher/src/components/: AppCard.tsx  AppGrid.tsx  ControllerNav.tsx  MugenLogo.tsx  StatusBar.tsx  TrainerCard.tsx
launcher/src/hooks/: useApps.ts  useController.ts  useDaemon.ts  useTrainers.ts
launcher/src/pages/: AppDetail.tsx  CheatBoard.tsx  Home.tsx  Settings.tsx  SharkDeck.tsx
launcher/src/styles/: global.css
launcher/src/types/: index.ts
scripts/: build.sh  dev.sh
