[package]
name = "sharkdeck-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "SharkDeck Daemon — Steam Deck trainer manager service"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust2 = "0.12"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
unrar = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
