[package]
name = "mugen-launcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "mugen_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
